force-app/main/default/objects/RestaurantNPSEmail__c/RestaurantNPSEmail__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Survey email template</description>
    <label>RestaurantNPSEmail</label>
</CustomObject>