force-app/main/default/objects/RestaurantNPSEmail__c/fields/EmailFieldAPI__c.field-meta.xml
<CustomField>
    <fullName>EmailFieldAPI__c</fullName>
    <label>EmailFieldAPI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>