force-app/main/default/objects/RestaurantNPSEmail__c/fields/EmailTemplateId3months__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateId3months__c</fullName>
    <description>Used For Click Delivery</description>
    <label>EmailTemplateId3months</label>
    <length>20</length>
    <type>Text</type>
</CustomField>