force-app/main/default/objects/RestaurantNPSEmail__c/fields/EmailTemplateId__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateId__c</fullName>
    <label>EmailTemplateId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>