force-app/main/default/objects/RestaurantNPSEmail__c/fields/OrgWideAddress__c.field-meta.xml
<CustomField>
    <fullName>OrgWideAddress__c</fullName>
    <label>OrgWideAddress</label>
    <length>20</length>
    <type>Text</type>
</CustomField>