force-app/main/default/objects/RestaurantNPSEmail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EmailTemplateId__c</columns>
    <columns>OrgWideAddress__c</columns>
    <columns>RecordTypeId__c</columns>
    <columns>EmailFieldAPI__c</columns>
    <columns>EmailTemplateId3months__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>